# naiveBayesClassifier

./: .gitignore  README.md  naiveBayesClassifier.cabal
src/: Main.hs
