name:                 naiveBayesClassifier
version:              0.1.0.0
synopsis:             Naive Bayes classifier
-- description:
-- license:
-- license-file:
homepage:             https://github.com/Ghbnxby/naiveBayesClassifier
author:               Michael Pritchin
maintainer:           pritchinmihail@gmail.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable naiveBayesClassifier
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
